# kdephys

./: LICENSE  README.md  __todo__.md  pyproject.toml  setup.py
kdephys/: __init__.py
kdephys/hypno/: __init__.py  ecephys_hypnogram.py  hypno.py
kdephys/main/: fpts.py  hypno.py  pandas.py  plots.py  utils.py
kdephys/pd/: __init__.py  df_methods.py  ecdata.py  pd_utils.py  spectral.py  tdt_spikes.py
kdephys/plot/: __init__.py  acr_plots.mplstyle  acr_plots2.mplstyle  acr_plots_dark.mplstyle  acr_plots_minimal.mplstyle  acr_pub.mplstyle  dat_view.mplstyle  main.py  plot.py  utils.py
kdephys/plot/archived_styles/: acr_pub.mplstyle
kdephys/signal/: timefrequency.py
kdephys/ssfm/: README.md  __init__.py  ssfm_utils.py  v1.py  v2.py  v3.py  v4.py  v5.py
kdephys/ssfm/.notebooks/: art_rej_tests.ipynb  art_rejector_fail.ipynb  ssfm_hypno_building.ipynb  ssfm_notes.ipynb  ssfm_temp_figs.ipynb  ssfm_v1_DEVELOPMENT.ipynb  ssfm_v2_DEVELOPMENT.ipynb
kdephys/unit_flavor/: __init__.py  register.py
kdephys/units/: __init__.py  io.py  methods.py  pldf_methods.py  utils.py
kdephys/utils/: __init__.py  data_dict.py  main.py  plots.py  spectral.py
kdephys/xr/: __init__.py  io.py  plots.py  spectral.py  utils.py  xr_flavor_da.py  xr_flavor_ds.py
kdephys/xrsig/: __init__.py  hypnogram_utils.py
notebooks/: scratch.ipynb
setup_tools/: setup.py  version.py
setup_tools/kdephys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
