[tool.poetry]
name = "kdephys"
version = "0.1.0"
description = "Personal analysis functions for electrophysiology"
authors = ["Kort Driessen <driessenkort@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
scipy = "^1.9.1"
pandas = "^1.4.4"
xarray = "^2022.6.0"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
neurodsp = "^2.1.0"
tdt = "^0.5.3"
hypnogram = {git = "https://github.com/CSC-UW/hypnogram.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
